@@ -3,7 +3,7 @@
     <name>IdealGraphVisualizer-parent</name>
     <groupId>org.graalvm.visualizer</groupId>
     <artifactId>IdealGraphVisualizer-parent</artifactId>
-    <version>1.23-SNAPSHOT</version>
+    <version>1.24-SNAPSHOT</version>
     <packaging>pom</packaging>
     <scm>
         <developerConnection>
@@ -31,6 +31,9 @@
                     <configuration>
                         <source>11</source>
                         <release>17</release>
+                        <compilerArgs>
+                            <arg>-g</arg>
+                        </compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -47,6 +50,7 @@
                             <java.awt.headless>true</java.awt.headless>
                         </systemPropertyVariables>
                         <argLine>
+                            --enable-native-access=ALL-UNNAMED
                             --add-opens=java.base/java.net=ALL-UNNAMED
                             --add-exports=java.desktop/sun.awt=ALL-UNNAMED
                             -Dpolyglot.engine.WarnInterpreterOnly=false
@@ -76,7 +80,7 @@
                             <configuration>
                                 <rules>
                                     <requireJavaVersion>
-                                        <version>[17,24)</version>
+                                        <version>[17,24]</version>
                                         <message>The IGV Netbeans platform requires a JDK version between 17 and 24</message>
                                     </requireJavaVersion>
                                 </rules>
@@ -108,7 +112,6 @@
         <module>Graal</module>
         <module>Graph</module>
         <module>GraphSearch</module>
-        <module>JSONExporter</module>
         <module>JavaSources</module>
         <module>NetworkConnection</module>
         <module>SelectionCoordinator</module>
